[package]
name = "rust-mmsd"
version = "0.1.0"
authors = ["ArenM <aren@peacevolution.org>"]
edition = "2018"

[workspace]
members = ["mms-parser"]

[dependencies]
# structopt = "0.3"
# Use my git branch with support for specifying ipv4 / ipv6 until it gets merged upstream
# isahc = "0.9.12"
mms-parser = { path = "./mms-parser" }

[dependencies.structopt]
version = "0.3"
default-features = false
features = []

[dependencies.isahc]
git = "https://github.com/ArenM/isahc"
branch = "specific-ip-protocal-version"
default-features = false
features = []
