[package]
name = "rust-mmsd"
version = "0.1.0"
authors = ["ArenM <aren@peacevolution.org>"]
edition = "2018"

[workspace]
members = ["mms-parser"]

[[bin]]
name = "mmsutil"
path = "src/main.rs"

[dependencies]
mms-parser = { path = "./mms-parser" }
mime = "0.3.16"
mime-db = "1.1.0"
pager = "0.16.0"
anyhow = "1.0.34"

[dependencies.uuid]
version = "0.8.1"
features = ["v4"]

[dependencies.structopt]
version = "0.3"
default-features = false
features = []

[dependencies.isahc]
version = "0.9.13"
default-features = false
features = []
