[package]
name = "mms-parser"
version = "0.1.0"
authors = ["ArenM <aren@peacevolution.org>"]
edition = "2018"

[lib]
name = "mms_parser"

[[bin]]
name = "paraser"
path = "src/main.rs"

[dependencies]
pico-args = "0.3.4"

[dependencies.multimap]
version = "0.8.2"
default-features = false
features = []

[dependencies.nom]
version = "6.0.0"
default-features = false
features = ["std"]

