[package]
name = "mms-parser"
version = "0.1.0"
authors = ["ArenM <aren@peacevolution.org>"]
edition = "2018"

[lib]
name = "mms_parser"

[dependencies]
derivative = "2.1.1"
encoding = "0.2.33"
log = "0.4.11"
mime = "0.3.16"

[dependencies.multimap]
version = "0.8.2"
default-features = false
features = []

[dependencies.nom]
version = "6.0.0"
default-features = false
features = ["std"]

[dev-dependencies]
pico-args = "0.3.4"
