[package]
name = "mms-parser"
version = "0.1.0"
authors = ["ArenM <aren@peacevolution.org>"]
edition = "2018"

[lib]
name = "mms_parser"

[dependencies]
derivative = "2.1.1"
# encoding = "0.2.33"
log = "0.4.11"
mime = "0.3.16"
ordered-multimap = "0.3.1"

[dependencies.nom]
version = "6.0.0"
default-features = false
features = ["std"]

[dev-dependencies]
pico-args = "0.3.4"
promptly = "0.3.0"
mime-db = "1.1.0"
